[tool.poetry]
name = "virtuagym-booker"
version = "0.1.0"
description = ""
authors = ["Will <pearsowill>"]
license = "Apache License Version 2.0"

[tool.poetry.dependencies]
python = "^3.10"
requests = "\b"
beautifulsoup4 = "^4.10.0"
boto3 = "^1.18.63"
ipykernel = "^6.4.1"
pywinpty = {file = "./.venv/Lib/site-packages/pywinpty-1.1.4-cp310-none-win_amd64.whl"}
jupyterlab = "^3.2.0"
lxml = {file = "./.venv/Lib/site-packages/lxml-4.6.3-cp310-cp310-win_amd64.whl"}
requests-html = "^0.10.0"
selenium = "^4.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
